# nonlinear_mpc

./: CMakeLists.txt  README.md  nonlinear_mpc_plugins.xml  package.xml
include/nonlinear_mpc/: def.hpp  nonlinear_mpc.hpp  nonlinear_mpc_interface.hpp
src/: main.cpp  main_sim.cpp  nonlinear_mpc.cpp
